# master-thesis-code

./: .gitignore  .gitmodules  Cargo.toml  benchmark.sh  docker-compose.yml  explore.sh  queries-for-dbpedia.sparql  queries-for-lubm-with-filter.sparql  readme.md  run_on_jena.py
lubm/: queries-sparql.sparql  run_on_jena.py
src/: lib.rs  main.rs
src/examples/: database.nt  databases.rs  lubm.rs  mod.rs  queries.rs
src/parse/: database.rs  mod.rs  query.rs  tests.rs
src/semantics/: explore.rs  mapping.rs  mod.rs  options.rs  results.rs  selectivity.rs  tests.rs
src/semantics/operations/: filter.rs  join.rs  leftjoin.rs  limit.rs  minus.rs  mod.rs  offset.rs  projection.rs  scan.rs  union.rs
src/semantics/operations/visitors/: all_plans.rs  bound.rs  condition.rs  flatten.rs  insert_filter.rs  meta.rs  mod.rs  optimize.rs  planner.rs  printer.rs
src/simplified/: mod.rs  operation.rs  operation_planner.rs  operation_visitor.rs  query_ast.rs  query_visitor.rs
src/syntax/: database.rs  expand.rs  mod.rs  query.rs
