[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tree-sitter-sparql = { path = "tree-sitter-sparql" }
tree-sitter-turtle = { path = "tree-sitter-turtle" }
tree-sitter = "0.20"
itertools = "0.10.5"
env_logger = "0.9.1"
log = "0.4.17"
dpc-pariter = "0.5.1"
iter-progress = "0.8.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
ron = "0.8.0"
regex = "1.7.1"
ndhistogram = "0.8.0"

